Fixed gap on dropdown menu, added page background image

--- a/css/index.css
+++ b/css/index.css
@@ -10,11 +10,16 @@ p {
   font-size: 1.5rem;
   font-family: 'Trirong', serif;
 }
+body {
+  background-image: url("https://images.unsplash.com/photo-1454117096348-e4abbeba002c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
+  background-attachment: fixed;
+}
 .banner {
   display: flex;
   max-width: 1000px;
   margin: 2rem auto;
   justify-content: center;
+  background-color: #eae8ff;
 }
 @media (max-width: 800px) {
   .banner {
@@ -31,6 +36,7 @@ p {
   display: flex;
   margin: 0 auto;
   justify-content: space-between;
+  background-color: #eae8ff;
 }
 @media (max-width: 500px) {
   .main-content {
@@ -172,7 +178,7 @@ p {
 .mobile-links {
   display: none;
   width: 45%;
-  top: 1.9rem;
+  top: 1.8rem;
   right: 0;
   margin-top: 5.2rem;
   position: fixed;
