--- a/less/navigation.less
+++ b/less/navigation.less
@@ -74,7 +74,7 @@
     display: none;
   }
   width: 45%;
-  top: 1.9rem;
+  top: 1.8rem;
   right: 0;
   margin-top: 5.2rem;
   position: fixed;
